--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "api/lib/lightweight-rest"]
 	path = api/lib/lightweight-rest
 	url = https://github.com/ddmills/lightweight-rest.git
+[submodule "core/lib/mysqli-wrapper"]
+	path = core/lib/mysqli-wrapper
+	url = https://github.com/ddmills/mysqli-wrapper.git
